--- a/Smol/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Smol/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,6 +131,7 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ForceObject.BP_ForceObject
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1061,6 +1062,8 @@ Voice.TimeStamp=2022.08.26-13.04.40
 Voice.LastCompileMethod=Unknown
 MovieSceneCapture.TimeStamp=2022.08.26-13.04.38
 MovieSceneCapture.LastCompileMethod=Unknown
+BlueprintGraph.TimeStamp=2022.08.26-13.04.34
+BlueprintGraph.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
@@ -1128,4 +1131,63 @@ StaticMeshActor.Cooking=True
 StaticMeshActor.Replication=True
 StaticMeshActor.WorldPartition=True
 StaticMeshActor.Actor=True
+BP_ForceObject_C.Default=True
+BP_ForceObject_C.Tick=True
+BP_ForceObject_C.Replication=True
+BP_ForceObject_C.Rendering=True
+BP_ForceObject_C.Collision=True
+BP_ForceObject_C.Actor=True
+BP_ForceObject_C.Input=True
+BP_ForceObject_C.HLOD=True
+BP_ForceObject_C.WorldPartition=True
+BP_ForceObject_C.Events=True
+
+[ContentBrowserRecent]
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ForceObject
+
+[AssetEditorToolkitTabLocation]
+/Game/ThirdPerson/Blueprints/BP_ForceObject.BP_ForceObject=1
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=("string","text","softclass")
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=False
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
