--- a/Smol/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Smol/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -131,7 +131,6 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ForceObject.BP_ForceObject
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -146,8 +145,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=640.000 Y=380.000
-WindowSize=X=1280.000 Y=720.000
+ScreenPosition=X=632.000 Y=372.000
+WindowSize=X=1296.000 Y=736.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1064,6 +1063,8 @@ MovieSceneCapture.TimeStamp=2022.08.26-13.04.38
 MovieSceneCapture.LastCompileMethod=Unknown
 BlueprintGraph.TimeStamp=2022.08.26-13.04.34
 BlueprintGraph.LastCompileMethod=Unknown
+Smol.TimeStamp=2022.09.06-09.07.12
+Smol.LastCompileMethod=Unknown
 
 [Python]
 LastDirectory=
